src/components/command-bar/commands/search/unified-search/components/unified-hit/unified-hit.module.css
.styleNestedMarkElements {
	& mark {
		background-color: transparent;
		color: var(--token-color-foreground-action);
		font-style: normal;
	}
}

.root {
	--border-radius: 5px;

	border-radius: var(--border-radius);
	padding: 8px;
	display: flex;
	gap: 12px;

	&:hover {
		background: var(--token-color-surface-strong);
		box-shadow: var(--token-surface-base-box-shadow);
		cursor: pointer;
	}
}

.icon {
	flex-shrink: 0;
	position: relative;
	top: 4px;
}

.content {
	width: 0;
	flex-grow: 1;
}

.title {
	composes: styleNestedMarkElements;
	color: var(--token-color-foreground-strong);
	display: block;
}

.description {
	composes: styleNestedMarkElements;
	color: var(--token-color-foreground-primary);
	display: block;
	margin-top: 2px;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}

.meta {
	margin-top: 6px;
	display: flex;
	align-items: center;
	gap: 6px;
}

.metaDotSeparator {
	color: var(--token-color-foreground-faint);
	display: block;
	width: 6px;
	height: 6px;
	flex-shrink: 0;
}

/* Product icon breadcrumb */

.productBreadcrumb {
	display: flex;
	gap: 4px;
	align-items: center;
}

.productBreadcrumbIcon {
	display: block;
	width: 14px;
	height: 14px;
}

.productBreadcrumbText {
	composes: hds-typography-body-100 from global;
	composes: hds-font-weight-regular from global;
	color: var(--token-color-foreground-faint);
}

/* URL path */

.breadcrumb {
	composes: hds-typography-body-100 from global;
	composes: hds-font-weight-regular from global;
	color: var(--token-color-foreground-faint);
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}

